[package]
name = "cargo_example"
version = "0.1.0"
edition = "2021"
authors = ["Rust Learner <learner@example.com>"]
description = "演示Cargo功能的示例项目"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[dev-dependencies]
criterion = "0.3"

[[bin]]
name = "main"
path = "src/main.rs"

[lib]
name = "cargo_example"
path = "src/lib.rs"
